--- a/src/main/resources/navigation.html
+++ b/src/main/resources/navigation.html
@@ -19,7 +19,11 @@
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
                        aria-expanded="false">CoffeeNet <span class="caret"></span></a>
-                    <ul id="apps-dropdown" class="dropdown-menu"></ul>
+                    <ul class="dropdown-menu">
+                        {{#apps}}
+                        <li><a href="{{url}}">{{name}}</a></li>
+                        {{/apps}}
+                    </ul>
                 </li>
             </ul>
 
@@ -31,7 +35,7 @@
             </form>
             <ul class="nav navbar-nav navbar-right">
                 <li class="navbar-text hidden-xs">
-                    <span data-content="user"></span>
+                    <span>{{username}}</span>
                 </li>
             </ul>
         </div>
